# hearth

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  backfill_category_colors.py  claude-progress.txt  cleanup_duplicates.py  feature_list.json  init.sh  install.sh  macbook-air.tail835cbe.ts.net.crt  seed_test_data.py
.claude/: settings.json
agent/: coding.md  initializer.md
api/: .env.example  CLAUDE.md  add_visibility_columns.py  life_dashboard.db  life_dashboard.spec  pyproject.toml  test_boot.db  test_boot.db-journal
desktop/: package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: agent-vocabulary.md  ai-coach-redesign.md  architecture.md  install-local.md  runbook.md
infra/: .env.example  CLAUDE.md  docker-compose.yml  local.env.example
migrations/: 0000_bootstrap.sql  0001_multi_user_audit_tags_attachments.down.sql  0001_multi_user_audit_tags_attachments.up.sql  0003_ai_layer.down.sql  0003_ai_layer.up.sql  0005_todos_assigned_to.down.sql  0005_todos_assigned_to.up.sql  0006_budget_foundation.down.sql  0006_budget_foundation.up.sql  0007_budget_category_keywords.down.sql  0007_budget_category_keywords.up.sql  0008_budget_transaction_is_transfer.down.sql  0008_budget_transaction_is_transfer.up.sql  0009_budget_category_groups.down.sql  0009_budget_category_groups.up.sql  0010_budget_targets.down.sql  (+19 more)
web/: CLAUDE.md  (+5 more)
(+309 files in other folders)
