[package]
name = "life-dashboard"
version = "0.1.0"
description = "Hearth — household operating system"
authors = ["Brandon Olin"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and to allow Tauri to use it
name = "life_dashboard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
# Optimise binary size for distribution
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
